deployments/default-backend.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: karmarkar
  name: default-service
  labels:
    app: restgosql
spec:
  type: ClusterIP
  ports:
    - name: "80"
      port: 80
  selector:
    app: restgosql
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: karmarkar
  name: restgosql-default-backend
  labels:
    app: restgosql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restgosql
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: karmarkar
      labels:
        app: restgosql
        tier: backend
    spec:
      containers:
      - image: nginx
        name: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
      restartPolicy: Always
