deployments/restgosql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: karmarkar
  name: restgosql-service
  labels:
    app: restgosql
spec:
  type: NodePort
  ports:
    - name: "1234"
      port: 1234
      nodePort: 30005
  selector:
    app: restgosql
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: karmarkar
  name: restgosql-app
  labels:
    app: restgosql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restgosql
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: karmarkar
      labels:
        app: restgosql
        tier: frontend
    spec:
      containers:
      - image: nivantdot/restgosql
        name: restgosql
        ports:
        - containerPort: 1234
          name: restgosql
        volumeMounts:
        - name: restgosql-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: restgosql-persistent-storage
        persistentVolumeClaim:
          claimName: rg-pv-claim
